Fix CORS with allowedOriginPatterns